--- a/src/RaynServer/Rayn/Rayn/Views/Home/Usage.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Home/Usage.cshtml
@@ -64,6 +64,24 @@
                     </div>
                 </div>
             </section>
+            
+            <section class="section">
+                <div class="content is-medium">
+                    <h1 class="title is-2 has-text-centered">Mac版の注意</h1>
+                    <p>
+                        Transparentを押しても透過されない場合は、アプリケーションがフルスクリーンになっている場合があります。
+                        その場合はMission Control上の画像のようなアイコンをクリックしてRayClientがデスクトップに存在するようにしてください。
+                    </p>
+                </div>
+                <div class="columns">
+                    <div class="column is-8 is-offset-2 ">
+                        <figure class="image is-4by3 is-small">
+                            <img src="~/img/Usage/mac.png" alt="">
+                        </figure>
+                    </div>
+                </div>
+            </section>
+
         </div>
     </div>
 
