--- a/src/RaynServer/Rayn/Rayn/Views/Thread/Index.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Thread/Index.cshtml
@@ -22,7 +22,7 @@
                         視聴者に共有してください。
                     </div>
                     <div class="message-body">
-                        @Model.ThreadUrl()
+                        @Model.ThreadUrl
                     </div>
                 </article>
                 @*<pre><code class="language-javascript">const test = 'test';</code></pre>*@
@@ -34,7 +34,7 @@
                         クライアントアプリの接続に必要です。
                     </div>
                     <div class="message-body">
-                        @Model.StreamerUrl()
+                        @Model.StreamerUrl
                     </div>
                 </article>
             </div>
