--- a/src/RaynServer/Rayn/Rayn/Views/History/Index.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/History/Index.cshtml
@@ -16,7 +16,7 @@
             {
                 <div class="box">
                     <h4 class="title is-3">@history.Title</h4>
-                    <h4 class="subtitle is-5">@history.DateTime.ToString("yyyy/MM/dd")</h4>
+                    <h4 class="subtitle is-5">@history.ScheduledDateTime.ToString("yyyy/MM/dd")</h4>
 
                     <article class="message is-primary">
                         <div class="message-header">
