--- a/src/RaynServer/Rayn/Rayn/Views/Home/Usage.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Home/Usage.cshtml
@@ -23,7 +23,9 @@
 
             <section class="section has-text-centered">
                 <h1 class="title is-2 ">使い方動画</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/fFvW8ybUVVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <figure class="image is-16by9">
+                    <iframe class="has-ratio" width="560" height="315" src="https://www.youtube.com/embed/fFvW8ybUVVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </figure>
             </section>
 
             <section class="section">
