--- a/src/RaynServer/Rayn/Rayn/Views/Shared/_Layout.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Shared/_Layout.cshtml
@@ -12,21 +12,28 @@
     <link rel="icon" type="image/x-icon" href="~/favicon.ico">
 </head>
 <body class="wf-notosanjp">
-    <header>
+    <header id="rayn-header">
         <nav class="navbar">
             <div class="container">
                 <div class="navbar-brand">
                     <a class="navbar-item" asp-controller="Home" asp-action="Index">
                         <label class="label is-large">Rayn</label>
                     </a>
-                </div>
-                <div class="navbar-end">
-                    <a class="navbar-item" asp-controller="Home" asp-action="Index">Home</a>
-                    <a class="navbar-item" asp-controller="Home" asp-action="Usage">Usage</a>
-                    <a class="navbar-item" href="https://github.com/nenoNaninu/Rayn">GitHub</a>
 
-                    @if (User.Identity?.IsAuthenticated ?? false)
-                    {
+                    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" v-on:click="ToggleBurger" v-bind:class="{ 'is-active': isBurgerMenuOpen }">
+                        <span aria-hidden="true"></span>
+                        <span aria-hidden="true"></span>
+                        <span aria-hidden="true"></span>
+                    </a>
+                </div>
+                <div class="navbar-menu" v-bind:class="{ 'is-active': isBurgerMenuOpen }">
+                    <div class="navbar-end">
+                        <a class="navbar-item" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="navbar-item" asp-controller="Home" asp-action="Usage">Usage</a>
+                        <a class="navbar-item" href="https://github.com/nenoNaninu/Rayn">GitHub</a>
+
+                        @if (User.Identity?.IsAuthenticated ?? false)
+                        {
                         <div class="navbar-item has-dropdown is-hoverable">
                             <a class="navbar-link">@User.FindFirst(ClaimTypes.Email)?.Value</a>
                             <div class="navbar-dropdown">
@@ -35,12 +42,12 @@
                                 <a class="navbar-item" asp-controller="Account" asp-action="Logout">Logout</a>
                             </div>
                         </div>
-                    }
-                    else
-                    {
+                        }
+                        else
+                        {
                         <a class="navbar-item" asp-controller="Account" asp-action="Login">Login</a>
-                    }
-
+                        }
+                    </div>
                 </div>
             </div>
         </nav>
@@ -57,6 +64,19 @@
     </environment>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+        const responsibleNavbar = new Vue({
+            el: '#rayn-header',
+            data: {
+                isBurgerMenuOpen: false
+            },
+            methods: {
+                ToggleBurger: function () {
+                    this.isBurgerMenuOpen = !this.isBurgerMenuOpen;
+                }
+            }
+        })
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
