--- a/src/RaynServer/Rayn/Rayn/Views/ThreadRoom/Index.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/ThreadRoom/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Rayn.ViewModels.ThreadRoomViewModel
 @{
-    Layout = "_ThreadRoomLayout";
-    ViewData["ThreadTitle"] = Model.ThreadTitle;
+    ViewData["BrandOverWriteValue"] = Model.ThreadTitle;
+    ViewData["Title"] = Model.ThreadTitle;
 }
 
 <div id="app">
