--- a/src/RaynServer/Rayn/Rayn/Views/Shared/_Layout.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Shared/_Layout.cshtml
@@ -17,7 +17,14 @@
             <div class="container">
                 <div class="navbar-brand">
                     <a class="navbar-item" asp-controller="Home" asp-action="Index">
+                        @if (ViewData.ContainsKey("BrandOverWriteValue"))
+                        {
+                        <label class="label is-large">@ViewData["BrandOverWriteValue"]</label>
+                        }
+                        else
+                        {
                         <label class="label is-large">Rayn</label>
+                        }
                     </a>
 
                     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" v-on:click="ToggleBurger" v-bind:class="{ 'is-active': isBurgerMenuOpen }">
