--- a/src/RaynServer/Rayn/Views/Home/Index.cshtml
+++ b/src/RaynServer/Rayn/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HomeViewModel
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 <section class="hero is-fullheight is-light">
