--- a/src/RaynServer/Rayn/Views/History/Index.cshtml
+++ b/src/RaynServer/Rayn/Views/History/Index.cshtml
@@ -1,7 +1,4 @@
 @model HistoryViewModel
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
     ViewData["Title"] = "History";
 }
@@ -9,33 +6,43 @@
 <section class="hero is-fullheight is-light">
     <div class="hero-body">
         <div class="container is-max-desktop">
+
             <p class="title">
                 履歴
             </p>
+
+            @if (Model is null)
+            {
+                <p class="subtitle">
+                    内部エラーが発生しました。
+                </p>
+                return;
+            }
+
             @foreach (var history in Model.Histories.OrderByDescending(x => x.ScheduledDateTime))
             {
-            <div class="box">
-                <h4 class="title is-3">@history.Title</h4>
-                <h4 class="subtitle is-5">@history.ScheduledDateTime.ToString("yyyy/MM/dd")</h4>
+                <div class="box">
+                    <h4 class="title is-3">@history.Title</h4>
+                    <h4 class="subtitle is-5">@history.ScheduledDateTime.ToString("yyyy/MM/dd")</h4>
 
-                <article class="message is-primary">
-                    <div class="message-header">
-                        参加者用URL
-                    </div>
-                    <div class="message-body m-2">
-                        @history.ShareUrl
-                    </div>
-                </article>
+                    <article class="message is-primary">
+                        <div class="message-header">
+                            参加者用URL
+                        </div>
+                        <div class="message-body m-2">
+                            @history.ShareUrl
+                        </div>
+                    </article>
 
-                <article class="message is-info">
-                    <div class="message-header">
-                        配信クライアントアプリ用URL
-                    </div>
-                    <div class="message-body m-2">
-                        @history.OwnerUrl
-                    </div>
-                </article>
-            </div>
+                    <article class="message is-info">
+                        <div class="message-header">
+                            配信クライアントアプリ用URL
+                        </div>
+                        <div class="message-body m-2">
+                            @history.OwnerUrl
+                        </div>
+                    </article>
+                </div>
             }
         </div>
     </div>
