--- a/src/RaynServer/Rayn/Views/Thread/Index.cshtml
+++ b/src/RaynServer/Rayn/Views/Thread/Index.cshtml
@@ -1,18 +1,25 @@
 @model ThreadViewModel
-
 @{
     ViewData["Title"] = "Thread";
 }
 
 @*
- ここで表示するもの
- 1. 視聴者に共有するID
- 2. スレッドID
+    ここで表示するもの
+    1. 視聴者に共有するID
+    2. スレッドID
 *@
 
 <section class="hero is-fullheight is-light ">
     <div class="hero-body">
         <div class="container">
+
+            @if (Model is null)
+            {
+                <h4 class="title">新規スレッドの作成に失敗しました。</h4>
+                <h4 class="subtitle">初めからやり直してください。</h4>
+                return;
+            }
+
             <h4 class="title">新規スレッド名: @Model.ThreadTitle</h4>
             <h4 class="subtitle">開催予定日: @Model.BeginningDate.ToString("yyyy/MM/dd")</h4>
             <div class="box">
@@ -25,7 +32,6 @@
                         @Model.ThreadUrl
                     </div>
                 </article>
-                @*<pre><code class="language-javascript">const test = 'test';</code></pre>*@
             </div>
             <div class="box">
                 <h4 class="title">クライアント接続用URL</h4>
